--- a/studio 1/index.html
+++ b/studio 1/index.html
@@ -4,11 +4,15 @@
 <title>Esther Kwak Portal</title>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre" rel="stylesheet">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js">
+</script>
+<script src="script.js"></script>
 </head>
 <body>
+
 	<h1>Esther Kwak</h1>
 	<header>
-		 <img id="banner" src="../blog/images/banner.jpg" alt="Banner Image"/>
+		 <div id="banner"> </div>
 	</header>
 	<section>
 		<div class="columns">
