--- a/studio 1/index.html
+++ b/studio 1/index.html
@@ -4,7 +4,7 @@
 <title>Esther Kwak Portal</title>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre" rel="stylesheet">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js">
+<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js">
 </script>
 <script src="script.js"></script>
 </head>
