--- a/studio 1/index.html
+++ b/studio 1/index.html
@@ -56,8 +56,8 @@
 
 		</div>
 		<footer>
-			<a href="http://validator.w3.org/check?uri=referer">Valid HTML 5</a> &nbsp;
-			<a href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> &nbsp;
+			<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a> &nbsp;
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> &nbsp;
 			<a href="mailto:ejkwak@ucdavis.edu">Email Me</a>
 		</footer>
 	</section>
