edits, add bookex 2 and 3, add isea topics
3 isea topics, book exercises 2 and 3, edit to styling, changed file
structure so correct link works (des157/index.html)

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Esther Kwak Portal</title>
-<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js">
 </script>
 <script src="script.js"></script>
@@ -16,13 +16,14 @@
 	</header>
 	<section>
 		<div class="columns">
-			<h2>exercises</h2>
+			<h2>Book Exercises</h2>
 				<nav>
 					<ul>
-						<li><a href="#">Functions 1 | 2</a></li>
+						<li><a href="bookex/looping.html">Ch 2-Looping</a></li>
+						<li><a href="bookex/minimum.html">Ch 3-Minimum</a></li>
 					</ul>
 				</nav>
-			
+
 		</div>
 
 
@@ -45,6 +46,7 @@
 			<h2>project</h2>
 				<nav>
 					<ul>
+						<li><a href="project/topicideas.html">3 Topic Ideas</a></li>
 						<li><a href="#">Topic Choice</a></li>
 						<li><a href="#">Background research</a></li>
 						<li><a href="#">ISEA Proposal</a></li>
@@ -52,7 +54,7 @@
 						<li><a href="#">Needfinding</a></li>
 						<li><a href="#">Brainstorm, visual research</a></li>
 					</ul>
-				</nav>		
+				</nav>
 
 		</div>
 		<footer>
