--- a/bookex/looping.html
+++ b/bookex/looping.html
@@ -13,10 +13,11 @@
 
         body {
             font-family: Verdana, Geneva, sans-serif;
-            color: white;
-            background-color: #333;
-            font-size: 11px;
+            color: black;
+            background-color: white;
+            font-size: 12px;
             margin: 24px;
+            padding-left: 10px;
         }
 
         h1 {
