corrected title again

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<h2>project</h2>
 				<nav>
 					<ul>
-						<li><a href="project/topicideas.html">3 Topic Brainstorm</a></li>
+						<li><a href="project/topicideas.html">Topic Brainstorm</a></li>
 						<li><a href="#">Topic Choice</a></li>
 						<li><a href="#">Background research</a></li>
 						<li><a href="#">ISEA Proposal</a></li>
