--- a/index.html
+++ b/index.html
@@ -47,12 +47,7 @@
 				<nav>
 					<ul>
 						<li><a href="project/topicideas.html">Topic Brainstorm</a></li>
-						<li><a href="#">Topic Choice</a></li>
-						<li><a href="#">Background research</a></li>
-						<li><a href="#">ISEA Proposal</a></li>
-						<li><a href="#">Comparative analysis</a></li>
-						<li><a href="#">Needfinding</a></li>
-						<li><a href="#">Brainstorm, visual research</a></li>
+						<li><a href="project/comparative.html">Comparative Research</a></li>
 					</ul>
 				</nav>
 
