css comparative edits
changed style for comparative research so images and text fit better

--- a/project/comparative.html
+++ b/project/comparative.html
@@ -11,6 +11,7 @@
   <h3>Save Bees</h3>
   <div class="photo">
     <img src="images/bees.jpg" alt="Save Bees Screenshot"/>
+  </div>
 
   <p>
     The <a href="https://savebees.org/">Save Bees</a> website is very simple to use and has a clear purpose focusing on bees. The homepage shows images of bees in high detail and very close up in a slide show format. Although it is very unique, I do not think this intices people to help bees because it seems to be too in detail and not appealing for all audiences. Overall the navigation is easy to follow so users can quickly find links to habitiat, petitions, learning llinks, thoughts, and favorites. It may be better to focus more on how saving bees will benefit the people viewing the site.
@@ -20,6 +21,7 @@
   <h3>U.S. Energy Information Administration </h3>
   <div class="photo">
     <img src="images/eia.jpg" alt="EIA site screenshot"/>
+  </div>
 
   <p><a href="https://www.eia.gov/consumption/">The EIA </a> website is very detailed and statistic-focused website. It serves as a publication of recent and historical energy statistics that is very comprehensive but can be overwhelming to look at. This publication includes statistics on total energy production, consumption, and trade; energy prices; overviews of petroleum, natural gas, coal, electricity, nuclear energy, renewable energy, and international petroleum; carbon dioxide emissions; and data unit conversion values.
   </p>
