add content to comparative text

--- a/project/comparative.html
+++ b/project/comparative.html
@@ -14,7 +14,7 @@
   </div>
 
   <p>
-    The <a href="https://savebees.org/">Save Bees</a> website is very simple to use and has a clear purpose focusing on bees. The homepage shows images of bees in high detail and very close up in a slide show format. Although it is very unique, I do not think this intices people to help bees because it seems to be too in detail and not appealing for all audiences. Overall the navigation is easy to follow so users can quickly find links to habitiat, petitions, learning llinks, thoughts, and favorites. It may be better to focus more on how saving bees will benefit the people viewing the site.
+    The <a href="https://savebees.org/">Save Bees</a> website is very simple to use and has a clear purpose focusing on bees. The homepage shows images of bees in high detail and very close up in a slide show format. Although it is very unique, I do not think this intices people to help bees because it seems to be too in detail and not appealing for all audiences. Overall the navigation is easy to follow so users can quickly find links to habitiat, petitions, learning llinks, thoughts, and favorites. I think this website could best benefit from a change in the aesthetic to something more simplistic and have a serious tone. It may be better to focus more on how saving bees will benefit the people viewing the site. The font and style of the page is more of a fun style and makes this issue seem less serious than the creator may have intended. I think more concrete evidence will also be helpful on the homepage to give context of how serious the extinction of bees really is. 
   </p>
 
 
@@ -23,7 +23,7 @@
     <img src="images/eia.jpg" alt="EIA site screenshot"/>
   </div>
 
-  <p><a href="https://www.eia.gov/consumption/">The EIA </a> website is very detailed and statistic-focused website. It serves as a publication of recent and historical energy statistics that is very comprehensive but can be overwhelming to look at. This publication includes statistics on total energy production, consumption, and trade; energy prices; overviews of petroleum, natural gas, coal, electricity, nuclear energy, renewable energy, and international petroleum; carbon dioxide emissions; and data unit conversion values.
+  <p><a href="https://www.eia.gov/consumption/">The EIA </a> website is very detailed and statistic-focused website. It serves as a publication of recent and historical energy statistics that is very comprehensive but can be overwhelming to look at. This website includes statistics on total energy production, consumption, and trade; energy prices; overviews of petroleum, natural gas, coal, electricity, nuclear energy, renewable energy, and international petroleum; carbon dioxide emissions; and data unit conversion values. All of this information is presented in a very condensed, text-heavy manner. It seems to contain lots of data and lengthy explanations on the homepage, which presents a somewhat cluttered and busy page. This information could be presented in a more visually appealing way that helps make users more inclined to read and learn about everything the EIA has to share. A more minimalistic design could benefit this website in order to better educate people on the importation charts and data this website has.
   </p>
 
 </body>
