--- a/studios/studio2/index.html
+++ b/studios/studio2/index.html
@@ -10,12 +10,21 @@
 
 <body>
   <section>
-    <form name="form">
+    <form name="f">
       <div>
-        <label> name </label>
-        <input type="text" name="crushname">
+        <label> valentine name </label>
+        <input type="text" name="vname">
       </div>
 
+      <div>
+        <label> adjective </label>
+        <input type = "text" name = "adj1">
+      </div>
+
+      <div>
+        <label> adjective </label>
+        <input type = "text" name = "adj2">
+      </div>
 
   </section>
 
