--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 		<footer>
 			<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a> &nbsp;
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> &nbsp;
-			<a href="mailto:ejkwak@ucdavis.edu">Email Me</a>
+			<a href="mailto:ejkwak@ucdavis.edu">Email Me</a> &nbsp;
+			<a href="https://estherkwak.github.io/des157/">GitHub</a>
 		</footer>
 	</section>
 </body>
