--- a/index.html
+++ b/index.html
@@ -1,63 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Esther Kwak Portal</title>
-<link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js">
-</script>
-<script src="script.js"></script>
+	<meta charset="UTF-8">
+	<title>Esther Kwak Portal</title>
+	<link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+	<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js">
+	</script>
+	<script src="script.js"></script>
 </head>
+
 <body>
 
 	<h1>Esther Kwak</h1>
+
 	<header>
-		 <div id="banner"> </div>
+		<div id="banner"> </div>
 	</header>
+
 	<section>
+
 		<div class="columns">
 			<h2>Book Exercises</h2>
-				<nav>
-					<ul>
-						<li><a href="bookex/looping.html">Ch 2-Looping</a></li>
-						<li><a href="bookex/minimum.html">Ch 3-Minimum</a></li>
-					</ul>
-				</nav>
-
+			<nav>
+				<ul>
+					<li><a href="bookex/looping.html">Ch 2-Looping</a></li>
+					<li><a href="bookex/minimum.html">Ch 3-Minimum</a></li>
+				</ul>
+			</nav>
 		</div>
 
-
-
-		<div class= "columns">
+		<div class="columns">
 			<h2>studios</h2>
-				<nav>
-					<ol>
-						<li><a href="blog/blog.html">Blah blah blah (blog)</a></li>
-						<li><a href="#">Mad Libs 2.0</a></li>
-						<li><a href="#">Pocket full of interface</a></li>
-						<li><a href="#">Time is on my side</a></li>
-						<li><a href="#">The library</a></li>
-					</ol>
-				</nav>
+			<nav>
+				<ol>
+					<li><a href="blog/blog.html">Blah blah blah (blog)</a></li>
+					<li><a href="#">Mad Libs 2.0</a></li>
+					<li><a href="#">Pocket full of interface</a></li>
+					<li><a href="#">Time is on my side</a></li>
+					<li><a href="#">The library</a></li>
+				</ol>
+			</nav>
 		</div>
-
 
 		<div class="columns">
 			<h2>project</h2>
-				<nav>
-					<ul>
-						<li><a href="project/topicideas.html">Topic Brainstorm</a></li>
-						<li><a href="project/comparative.html">Comparative Research</a></li>
-					</ul>
-				</nav>
+			<nav>
+				<ul>
+					<li><a href="project/topicideas.html">Topic Brainstorm</a></li>
+					<li><a href="project/comparative.html">Comparative Research</a></li>
+				</ul>
+			</nav>
 
 		</div>
+
 		<footer>
 			<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a> &nbsp;
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> &nbsp;
 			<a href="mailto:ejkwak@ucdavis.edu">Email Me</a> &nbsp;
 			<a href="https://estherkwak.github.io/des157/">GitHub</a>
 		</footer>
+
 	</section>
 </body>
 
