--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<nav>
 				<ol>
 					<li><a href="blog/blog.html">Blah blah blah (blog)</a></li>
-					<li><a href="#">Mad Libs 2.0</a></li>
+					<li><a href="studios/studio2/index.html">Mad Libs 2.0</a></li>
 					<li><a href="#">Pocket full of interface</a></li>
 					<li><a href="#">Time is on my side</a></li>
 					<li><a href="#">The library</a></li>
