html validation changes

--- a/studios/studio2/index.html
+++ b/studios/studio2/index.html
@@ -15,7 +15,7 @@
   <h1>Dear Valentine...</h1>
   <img src="images/twoHearts.gif" alt="glitter hearts"/>
 
-  <section id="questions">
+  <section>
     <form name="f" id="form-f">
       <div>
         <label> Valentine's Name </label>
@@ -80,13 +80,11 @@
   <div id="result">
   </div>
 
+  <footer>
+    <a href="https://estherkwak.github.io/des157">portal</a> |
+    <a href="mailto:ejkwak@ucdavis.edu">email</a> |
+    <a href="https://validator.w3.org/check?uri=referer">valid html</a> |
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">valid css</a>
+   </footer>
 </body>
-
-<footer>
-   <a href="https://estherkwak.github.io/des157">portal</a> |
-   <a href="mailto:ejkwak@ucdavis.edu">email</a> |
-   <a href="https://validator.w3.org/check?uri=referer">valid html</a> |
-   <a href="https://jigsaw.w3.org/css-validator/check/referer">valid css</a>
- </footer>
-
 </html>
