--- a/studios/studio2/index.html
+++ b/studios/studio2/index.html
@@ -15,7 +15,7 @@
   <h1>Dear Valentine...</h1>
   <img src="images/twoHearts.gif" alt="glitter hearts"/>
 
-  <section>
+  <article>
     <form name="f" id="form-f">
       <div>
         <label> Valentine's Name </label>
@@ -75,7 +75,7 @@
       <input type="submit" value="submit" id="submit"/>
     </form>
 
-  </section>
+  </article>
 
   <div id="result">
   </div>
