--- a/studios/studio2/index.html
+++ b/studios/studio2/index.html
@@ -12,10 +12,10 @@
 
 <body>
 
-  <h1>Dear Valentine...</h1>
   <img src="images/twoHearts.gif" alt="glitter hearts"/>
 
-  <article>
+  <section>
+    <h1>Dear Valentine</h1>
     <form name="f" id="form-f">
       <div>
         <label> Valentine's Name </label>
@@ -75,7 +75,7 @@
       <input type="submit" value="submit" id="submit"/>
     </form>
 
-  </article>
+  </section>
 
   <div id="result">
   </div>
