--- a/bookex/cat.html
+++ b/bookex/cat.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>! ADD A DESCRIPTIVE TITLE HERE...DO NOT FORGET TO UPDATE THIS !</title>
+    <title>chapter 13-the cat's hat</title>
     <style>
         * {
             margin: 0px;
@@ -31,7 +31,7 @@
       <img src="http://eloquentjavascript.net/img/hat.png" id="hat" style="position: relative">
     </p>
 
-    <h1>! ADD THE CHAPTER NUMBER HERE FOLLOWED BY BRIEF TITLE FOR THE EXERCISE !</h1>
+    <h1>chapter 13-the cat's hat</h1>
     <h2>open the console to see the results of the script</h2>
     <script>
         // ADD DESCRIPTIVE COMMENTS BEFORE STATEMENTS AND BLOCK OF CODE
