topic choice and studio 3 images

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				<ul>
 					<li><a href="project/topicideas.html">Topic Brainstorm</a></li>
 					<li><a href="project/comparative.html">Comparative Research</a></li>
+					<li><a href="project/topicchoice.html">Topic Choice</a></li>
 				</ul>
 			</nav>
 
