--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<ol>
 					<li><a href="blog/blog.html">Blah blah blah (blog)</a></li>
 					<li><a href="studios/studio2/index.html">Mad Libs 2.0</a></li>
-					<li><a href="#">Pocket full of interface</a></li>
+					<li><a href="studios/studio3/index.html">Pocket full of interface</a></li>
 					<li><a href="#">Time is on my side</a></li>
 					<li><a href="#">The library</a></li>
 				</ol>
