--- a/studios/studio3/index.html
+++ b/studios/studio3/index.html
@@ -8,24 +8,26 @@
     <script src='script.js' type="text/javascript"></script>
 </head>
 <body>
-	<div id="container"> 
+	<div id="container">
 		<div class="row1">
-			<div class="row1_box"> 
-				Pocketful of Poems (Click to toggle!)
+			<div class="row1_box">
+				<br><h1>Pocketful of Poems</h1><br>
+        <em>click images to read!</em><br><br>
+        <a href="https://www.amazon.com/Milk-Honey-Rupi-Kaur/dp/1508229619">Source: Kaur, Rupi. Milk and Honey. Kansas City, MO: Andrews McMeel, 2015. Web.</a>
 			</div>
-			<div class="row1_box"> 
+			<div class="row1_box">
 				<img id="img_1" src="img/1face.jpg" alt="img" />
-				<div class="text"> 
+				<div class="text">
 					if you are not enough for yourself<br>
 					you will never be enough<br>
 					for someone else<br><br>
-					-rupi kaur 
+					-rupi kaur
 				</div>
 
 			</div>
-			<div class="row1_box"> 
+			<div class="row1_box">
 				<img id="img_2" src="img/2heart.jpg" alt="img"/>
-				<div class="text"> 
+				<div class="text">
 					what is stronger<br>
 					than the human heart<br>
 					which shatters over and over<br>
@@ -36,11 +38,11 @@
 			</div>
 		</div>
 
-		
+
 		<div class="row2">
-			<div class="row2_box"> 
+			<div class="row2_box">
 				<img id="img_3" src="img/3woman.jpg" alt="img"/>
-				<div class="text"> 
+				<div class="text">
 					what’s the greatest lesson a woman should learn?<br><br>
 					that since day one. she’s already had everything<br>
 					she needs within herself. it’s the world that <br>
@@ -48,9 +50,9 @@
 					-rupi kaur<br>
 				</div>
 			</div>
-			<div class="row2_box"> 
+			<div class="row2_box">
 				<img id="img_4" src="img/4cup.jpg" alt="img"/>
-				<div class="text"> 
+				<div class="text">
 					she is water<br><br>
 					soft enough <br>
 					to offer life <br>
@@ -60,9 +62,9 @@
 
 				</div>
 			</div>
-			<div class="row2_box"> 
+			<div class="row2_box">
 				<img id="img_5" src="img/5hand.jpg" alt="img"/>
-				<div class="text"> 
+				<div class="text">
 					the world<br>
 					gives you<br>
 					so much pain<br>
@@ -75,15 +77,15 @@
 			</div>
 		</div>
 	</div>
-	
+
 
   <!--add an img tag that links to the question.png file in the images folder
       and give the img an id of "heart"-->
 
     <footer>
-	    <br><br><a href="https://estherkwak.github.io/des157">portal</a> |
-	    <a href="mailto:ejkwak@ucdavis.edu">email</a> |
-	    <a href="https://validator.w3.org/check?uri=referer">valid html</a> |
+	    <br><br><a href="https://estherkwak.github.io/des157">portal</a> &nbsp;
+	    <a href="mailto:ejkwak@ucdavis.edu">email</a> &nbsp;
+	    <a href="https://validator.w3.org/check?uri=referer">valid html</a> &nbsp;
 	    <a href="https://jigsaw.w3.org/css-validator/check/referer">valid css</a>
 	</footer>
 </body>
