--- a/studios/studio3/index.html
+++ b/studios/studio3/index.html
@@ -16,7 +16,7 @@
         <a href="https://www.amazon.com/Milk-Honey-Rupi-Kaur/dp/1508229619">Source: Kaur, Rupi. Milk and Honey. Kansas City, MO: Andrews McMeel, 2015. Web.</a>
 			</div>
 			<div class="row1_box">
-				<img id="img_1" src="img/1face.JPG" alt="img" />
+				<img id="img_1" src="img/1face.jpg" alt="img face" />
 				<div class="text">
 					if you are not enough for yourself<br>
 					you will never be enough<br>
