--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 					<li><a href="bookex/looping.html">Ch 2-Looping</a></li>
 					<li><a href="bookex/minimum.html">Ch 3-Minimum</a></li>
 					<li><a href="bookex/cat.html">Ch 13-The Cat's Hat</a></li>
+					<li><a href="bookex/mouse.html">Ch 14-Mouse Trail</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -52,6 +53,7 @@
 					<li><a href="project/topicideas.html">Topic Brainstorm</a></li>
 					<li><a href="project/comparative.html">Comparative Research</a></li>
 					<li><a href="project/topicchoice.html">Topic Choice</a></li>
+					<li><a href="project/research.html">Research</a></li>
 				</ul>
 			</nav>
 
