--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<li><a href="project/topicideas.html">Topic Brainstorm</a></li>
 					<li><a href="project/comparative.html">Comparative Research</a></li>
 					<li><a href="project/topicchoice.html">Topic Choice</a></li>
-					<li><a href="project/research.html">Research</a></li>
+					<li><a href="project/research.pdf">Research</a></li>
 				</ul>
 			</nav>
 
