--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<li><a href="blog/blog.html">Blah blah blah (blog)</a></li>
 					<li><a href="studios/studio2/index.html">Mad Libs 2.0</a></li>
 					<li><a href="studios/studio3/index.html">Pocket full of Poems</a></li>
-					<li><a href="#">Time is on my side</a></li>
+					<li><a href="#studios/studio4/index.html">Time is on my side</a></li>
 					<li><a href="#">The library</a></li>
 				</ol>
 			</nav>
