--- a/bookex/mouse.html
+++ b/bookex/mouse.html
@@ -22,6 +22,17 @@
         h1 {
             margin-bottom: 24px;
         }
+
+        .trail {
+           /* className for the trail elements */
+           position: absolute;
+           height: 5px;
+           width: 5px;
+           border-radius: 5px;
+           /*change the color of the dot*/
+           background: pink;
+       }
+
     </style>
 </head>
 <body>
