blog and studio4

--- a/studios/studio4/index.html
+++ b/studios/studio4/index.html
@@ -7,17 +7,20 @@
     <script src='script.js' type="text/javascript"></script>
 </head>
 <body>
-
+<h1>California Cities</h1>
 	<div id="container">
 		<img id="cali_map" src="images/camap.jpg" width="300" height="300" alt="california map" usemap="#cali_map"/>
 		<map name="#cali_map">
-			<area shape="circle" coords="40,128,20" alt="SF" title="SF" id="SF">
-			<area shape="circle" coords="155,263,20" alt="LA" title="LA" id="LA">
-			<area shape="circle" coords="64,138,20"  alt="SJ" title="SJ" id="SJ">
+			<area shape="circle" coords="40,128,22" alt="SF" title="SF" id="SF">
+			<div id= "tip"> <b>San Francisco</b> <br></br> San Francisco, in northern California, is a hilly city on the tip of a peninsula surrounded by the Pacific Ocean and San Francisco Bay. </div>
+			<area shape="circle" coords="155,256,22" alt="LA" title="LA" id="LA">
+			<div id= "tip2"> <b>Los Angeles</b> <br></br> Los Angeles is a sprawling Southern California city and the center of the nation’s film and television industry. </div>
+			<area shape="circle" coords="64,138,22"  alt="SJ" title="SJ" id="SJ">
+			<div id= "tip3"> <b>San Jose</b> <br></br> San Jose is a large city surrounded by rolling hills in Silicon Valley, a major technology hub in California's Bay Area. </div>
 		</map>
 	</div>
 
-  <div id= "tip"> San Francisco </div>
+  <!-- <div id= "tip"> San Francisco </div> -->
 
     <footer>
 	    <br><br><a href="https://estherkwak.github.io/des157">portal</a> |
