--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 					<li><a href="project/comparative.html">Comparative Research</a></li>
 					<li><a href="project/topicchoice.html">Topic Choice</a></li>
 					<li><a href="project/research.pdf">Research</a></li>
+					<li><a href="project/proposal1.pdf">ISEA Proposal</a></li>
+
 				</ul>
 			</nav>
 
