--- a/studios/studio4/index.html
+++ b/studios/studio4/index.html
@@ -19,15 +19,14 @@
 			<div id= "tip3"> <b>San Jose</b> <br></br> San Jose is a large city surrounded by rolling hills in Silicon Valley, a major technology hub in California's Bay Area. </div>
 		</map>
 	</div>
-
-  <!-- <div id= "tip"> San Francisco </div> -->
-
+  <div>
     <footer>
-	    <br><br><a href="https://estherkwak.github.io/des157">portal</a> |
+	    <a href="https://estherkwak.github.io/des157">portal</a> |
 	    <a href="mailto:ejkwak@ucdavis.edu">email</a> |
 	    <a href="https://validator.w3.org/check?uri=referer">valid html</a> |
 	    <a href="https://jigsaw.w3.org/css-validator/check/referer">valid css</a>
-	</footer>
+	 </footer>
+ </div>
 </body>
 
 </html>
