--- a/studios/studio4/index.html
+++ b/studios/studio4/index.html
@@ -11,22 +11,21 @@
 	<div id="container">
 		<img id="cali_map" src="images/camap.jpg" width="300" height="300" alt="california map" usemap="#cali_map"/>
 		<map name="#cali_map">
-			<area shape="circle" coords="40,128,22" alt="SF" title="SF" id="SF">
-			<div id= "tip"> <b>San Francisco</b> <br></br> San Francisco, in northern California, is a hilly city on the tip of a peninsula surrounded by the Pacific Ocean and San Francisco Bay. </div>
-			<area shape="circle" coords="155,256,22" alt="LA" title="LA" id="LA">
+			<area shape="circle" coords="40,128,22" alt="SF" title="SF" id="SF" href=#>
+			<div id= "tip"> <b>San Francisco</b> <br> San Francisco, in northern California, is a hilly city on the tip of a peninsula surrounded by the Pacific Ocean and San Francisco Bay. </div>
+			<area shape="circle" coords="155,256,22" alt="LA" title="LA" id="LA" href=#>
 			<div id= "tip2"> <b>Los Angeles</b> <br></br> Los Angeles is a sprawling Southern California city and the center of the nation’s film and television industry. </div>
-			<area shape="circle" coords="64,138,22"  alt="SJ" title="SJ" id="SJ">
+			<area shape="circle" coords="64,138,22"  alt="SJ" title="SJ" id="SJ" href=#>
 			<div id= "tip3"> <b>San Jose</b> <br></br> San Jose is a large city surrounded by rolling hills in Silicon Valley, a major technology hub in California's Bay Area. </div>
 		</map>
 	</div>
-  <div>
     <footer>
 	    <a href="https://estherkwak.github.io/des157">portal</a> |
 	    <a href="mailto:ejkwak@ucdavis.edu">email</a> |
 	    <a href="https://validator.w3.org/check?uri=referer">valid html</a> |
 	    <a href="https://jigsaw.w3.org/css-validator/check/referer">valid css</a>
 	 </footer>
- </div>
+
 </body>
 
 </html>
