--- a/studios/studio4/index.html
+++ b/studios/studio4/index.html
@@ -14,9 +14,9 @@
 			<area shape="circle" coords="40,128,22" alt="SF" title="SF" id="SF" href=#>
 			<div id= "tip"> <b>San Francisco</b> <br> San Francisco, in northern California, is a hilly city on the tip of a peninsula surrounded by the Pacific Ocean and San Francisco Bay. </div>
 			<area shape="circle" coords="155,256,22" alt="LA" title="LA" id="LA" href=#>
-			<div id= "tip2"> <b>Los Angeles</b> <br></br> Los Angeles is a sprawling Southern California city and the center of the nation’s film and television industry. </div>
+			<div id= "tip2"> <b>Los Angeles</b> <br> Los Angeles is a sprawling Southern California city and the center of the nation’s film and television industry. </div>
 			<area shape="circle" coords="64,138,22"  alt="SJ" title="SJ" id="SJ" href=#>
-			<div id= "tip3"> <b>San Jose</b> <br></br> San Jose is a large city surrounded by rolling hills in Silicon Valley, a major technology hub in California's Bay Area. </div>
+			<div id= "tip3"> <b>San Jose</b> <br>San Jose is a large city surrounded by rolling hills in Silicon Valley, a major technology hub in California's Bay Area. </div>
 		</map>
 	</div>
     <footer>
