--- a/studios/studio4/index.html
+++ b/studios/studio4/index.html
@@ -10,7 +10,7 @@
 <h1>California Cities</h1>
 	<div id="container">
 		<img id="cali_map" src="images/camap.jpg" width="300" height="300" alt="california map" usemap="#cali_map"/>
-		<map name="#cali_map">
+		<map name="cali_map">
 			<area shape="circle" coords="40,128,22" alt="SF" title="SF" id="SF" href=#>
 			<div id= "tip"> <b>San Francisco</b> <br> San Francisco, in northern California, is a hilly city on the tip of a peninsula surrounded by the Pacific Ocean and San Francisco Bay. </div>
 			<area shape="circle" coords="155,256,22" alt="LA" title="LA" id="LA" href=#>
