--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 					<li><a href="project/comparative.html">Comparative Research</a></li>
 					<li><a href="project/topicchoice.html">Topic Choice</a></li>
 					<li><a href="project/research.pdf">Research</a></li>
-					<li><a href="project/proposal1.pdf">ISEA Proposal</a></li>
+					<li><a href="project/proposal1.pdf">ISEA Proposal Draft</a></li>
+					<li><a href="project/isea2017.pdf">ISEA Proposal</a></li>
 
 				</ul>
 			</nav>
