links for project
project process links

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
 					<li><a href="project/research.pdf">Research</a></li>
 					<li><a href="project/proposal1.pdf">ISEA Proposal Draft</a></li>
 					<li><a href="project/isea2017.pdf">ISEA Proposal</a></li>
-
+					<li><a href="project/isea2017.pdf">Needfinding</a></li>
+					<li><a href="project/isea2017.pdf">Visual research</a></li>
+					<li><a href="project/isea2017.pdf">Audience research</a></li>
+					<li><a href="project/isea2017.pdf">User Goals</a></li>
+					<li><a href="project/isea2017.pdf">Storyboards</a></li>
+					<li><a href="project/isea2017.pdf">Paper prototypes</a></li>
 				</ul>
 			</nav>
 
