--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 					<li><a href="project/isea2017.pdf">Needfinding</a></li>
 					<li><a href="project/isea2017.pdf">Visual research</a></li>
 					<li><a href="project/isea2017.pdf">Audience research</a></li>
-					<li><a href="project/isea2017.pdf">User Goals</a></li>
+					<li><a href="project/usergoals.pdf">User Goals</a></li>
 					<li><a href="project/isea2017.pdf">Storyboards</a></li>
-					<li><a href="project/isea2017.pdf">Paper prototypes</a></li>
+					<li><a href="project/paperproto.pdf">Paper prototypes</a></li>
 				</ul>
 			</nav>
 
