--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
 					<li><a href="project/proposal1.pdf">ISEA Proposal Draft</a></li>
 					<li><a href="project/isea2017.pdf">ISEA Proposal</a></li>
 					<li><a href="project/isea2017.pdf">Needfinding</a></li>
-					<li><a href="project/isea2017.pdf">Visual research</a></li>
+					<li><a href="project/moodboards.pdf">Visual research</a></li>
 					<li><a href="project/isea2017.pdf">Audience research</a></li>
 					<li><a href="project/usergoals.pdf">User Goals</a></li>
 					<li><a href="project/isea2017.pdf">Storyboards</a></li>
+					<li><a href="project/siteflow.pdf">Site Flow</a></li>
+					<li><a href="project/userflow.pdf">User Flow</a></li>
+					<li><a href="project/wireframe.pdf">Wireframe</a></li>
 					<li><a href="project/paperproto.pdf">Paper prototypes</a></li>
 				</ul>
 			</nav>
