--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<li><a href="project/isea2017.pdf">ISEA Proposal</a></li>
 					<li><a href="project/isea2017.pdf">Needfinding</a></li>
 					<li><a href="project/moodboards.pdf">Visual research</a></li>
-					<li><a href="project/isea2017.pdf">Audience research</a></li>
+					<li><a href="project/usergoals.pdf">Audience research</a></li>
 					<li><a href="project/usergoals.pdf">User Goals</a></li>
 					<li><a href="project/isea2017.pdf">Storyboards</a></li>
 					<li><a href="project/siteflow.pdf">Site Flow</a></li>
