--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 					<li><a href="project/isea2017.pdf">ISEA Proposal</a></li>
 					<li><a href="project/isea2017.pdf">Needfinding</a></li>
 					<li><a href="project/moodboards.pdf">Visual research</a></li>
-					<li><a href="project/usergoals.pdf">Audience research</a></li>
+					<li><a href="project/audience.pdf">Audience research</a></li>
 					<li><a href="project/usergoals.pdf">User Goals</a></li>
-					<li><a href="project/isea2017.pdf">Storyboards</a></li>
+					<li><a href="project/storyboard.pdf">Storyboards</a></li>
 					<li><a href="project/siteflow.pdf">Site Flow</a></li>
 					<li><a href="project/userflow.pdf">User Flow</a></li>
 					<li><a href="project/wireframe.pdf">Wireframe</a></li>
