--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 					<li><a href="project/userflow.pdf">User Flow</a></li>
 					<li><a href="project/wireframe.pdf">Wireframe</a></li>
 					<li><a href="project/paperproto.pdf">Paper prototypes</a></li>
+					<li><a href="project/proto1/index.html">Prototpye 1</a></li>
 				</ul>
 			</nav>
 
