--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 					<li><a href="project/wireframe.pdf">Wireframe</a></li>
 					<li><a href="project/paperproto.pdf">Paper prototypes</a></li>
 					<li><a href="project/proto1/index.html">Prototpye 1</a></li>
+					<li><a href="project/proto1/index.html">Prototpye 2</a></li>
+					<li><a href="project/proto3/index.html">Prototpye 3</a></li>
 				</ul>
 			</nav>
 
