--- a/project/proto3/html/about.html
+++ b/project/proto3/html/about.html
@@ -69,9 +69,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Bike for a better future, planet, and self</h1>
-                        <!--<p>Improve your physical and mental health, save gas money, no traffic and no parking lot struggles, the list goes on and on.</p>-->
-                        <p>Help cut greenhouse gas emissions and reduce the nation’s dependence on oil. Traffic congestion wastes nearly 3.9 billion gallons of gas per year in the US. For every 1 mile pedaled rather than driven, nearly 1 pound of CO² (0.88 lbs) is saved. (US Environmental Protection Agency, 2009).</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Let's go!</a>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Pedal</a>
                     </div>
                 </div>
             </div>
