proto 3 edits to map

--- a/project/proto3/index.html
+++ b/project/proto3/index.html
@@ -217,12 +217,10 @@
         <div class="col-md-12">
           <h3 class="section-title">map</h3>
           <div class="section-title-divider"></div>
-          <p class="section-description">This will be a map where you can hover over locations to learn more about county and statistics about transportaion methods (biking, busing, trains) that are available there. <br> <a href="mapdraft/index.html">Rough outline of Map Page</a> without the additional details about different types of transportation in each county. </p>
+          <p class="section-description">This will be a map where you can hover over locations to learn more about county and statistics about transportaion methods (biking, busing, trains) that are available there. <br> <a href="mapdraft/index.html">Rough outline of Map Page</a> This map page is a draft of the functionailty of the final map function. <br> On hover, I would like there to be more a visually striking icon and imagery for the different methods of transportation available in that county.</p>
         </div>
       </div>
-
       <div class="row">
-
 
       </div>
     </div>
