--- a/project/proto3/index.html
+++ b/project/proto3/index.html
@@ -7,27 +7,10 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
-  <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
-  <meta property="og:title" content="">
-  <meta property="og:image" content="">
-  <meta property="og:url" content="">
-  <meta property="og:site_name" content="">
-  <meta property="og:description" content="">
-
-  <!-- Twitter Cards integration: https://dev.twitter.com/cards/  -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="">
-  <meta name="twitter:title" content="">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:image" content="">
-
-  <!-- Place your favicon.ico and apple-touch-icon.png in the template root directory -->
-  <link href="favicon.ico" rel="shortcut icon">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 
-  <!-- Bootstrap CSS File -->
+  <!-- CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
@@ -37,20 +20,11 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-<!-- =======================================================
-  Theme Name: Imperial
-  Theme URL: https://bootstrapmade.com/imperial-free-onepage-bootstrap-theme/
-  Author: BootstrapMade.com
-  Author URL: https://bootstrapmade.com
-======================================================= -->
 </head>
 
 <body>
   <div id="preloader"></div>
 
-<!--==========================
-  Hero Section
-============================-->
   <section id="hero">
     <div class="hero-container">
       <div class="wow fadeIn">
@@ -68,16 +42,12 @@
     </div>
   </section>
 
-<!--==========================
-  Header Section
-============================-->
+<!--Header Section-->
   <header id="header">
     <div class="container">
 
       <div id="logo" class="pull-left">
         <a href="#hero"><img src="img/logo.png" alt="logo" title="logo" /></img></a>
-        <!-- Uncomment below if you prefer to use a text image -->
-        <!--<h1><a href="#hero">Header 1</a></h1>-->
       </div>
 
       <nav id="nav-menu-container">
@@ -88,32 +58,13 @@
           <li><a href="#map">Map</a></li>
           <li><a href="#testimonials">Footprint</a></li>
           <li><a href="#team">#pedalpower</a></li>
-          <!--<li class="menu-has-children"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="menu-has-children"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>-->
           </li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
-      </nav><!-- #nav-menu-container -->
+      </nav>
     </div>
-  </header><!-- #header -->
-
-<!--==========================
-  About Section
-============================-->
+  </header>
+<!--About Section-->
   <section id="about">
     <div class="container wow fadeInUp">
       <div class="row">
@@ -142,9 +93,7 @@
     </div>
   </section>
 
-<!--==========================
-  why Section
-============================-->
+<!--why Section-->
   <section id="why">
     <div class="container wow fadeInUp">
       <div class="row">
@@ -190,9 +139,7 @@
     </div>
   </section>
 
-<!--==========================
-  Subscrbe Section
-============================-->
+<!--Subscrbe Section-->
   <section id="subscribe">
     <div class="container wow fadeInUp">
       <div class="row">
@@ -207,9 +154,7 @@
     </div>
   </section>
 
-<!--==========================
-  Porfolio Section
-============================-->
+<!--Porfolio Section-->
 <br>
   <section id="map">
     <div class="container wow fadeInUp">
@@ -226,12 +171,7 @@
     </div>
   </section>
 
-
-
-<!--==========================
-  Testimonials Section
-============================-->
-
+<!--Map Section-->
   <section id="testimonials">
     <div class="container wow fadeInUp">
       <div class="row">
@@ -242,43 +182,10 @@
           <img src="img/footprintcalc.jpg" width=100% height=10%>
         </div>
       </div>
-
-      <!--<div class="row">
-        <div class="col-md-3">
-          <div class="profile">
-            <div class="pic"><img src="img/client-1.jpg" alt=""></div>
-            <h4>Saul Goodman</h4>
-            <span>Lawless Inc</span>
-          </div>
-        </div>
-        <div class="col-md-9">
-          <div class="quote">
-            <b><img src="img/quote_sign_left.png" alt=""></b> Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper. <small><img src="img/quote_sign_right.png" alt=""></small>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-9">
-          <div class="quote">
-            <b><img src="img/quote_sign_left.png" alt=""></b> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis architecto beatae. <small><img src="img/quote_sign_right.png" alt=""></small>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="profile">
-            <div class="pic"><img src="img/client-2.jpg" alt=""></div>
-            <h4>Sara Wilsson</h4>
-            <span>Odeo Inc</span>
-          </div>
-        </div>
-      </div>-->
-
     </div>
   </section>
 
-<!--==========================
-  Team Section
-============================-->
+<!--Team Section-->
   <section id="team">
     <div class="container wow fadeInUp">
       <div class="row">
@@ -307,34 +214,13 @@
             <div><img src="img/team-2.jpg" alt="instapictures"></div>
             <p>****Above there will be instagram photo posts that used the #pedalpower hashtag. Users can scroll horizontally through three photos at a time and go back and forward using the arrows on the left and right of the three photos****</p>
         </div>
-
-        <!--<div class="col-md-3">
-          <div class="member">
-            <div class="pic"><img src="img/team-3.jpg" alt=""></div>
-            <span>Twitter</span>
-            <div class="social">
-              <a href=""><i class="fa fa-twitter"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="member">
-            <div class="pic"><img src="img/team-4.jpg" alt=""></div>
-            <span>LinkedIn</span>
-            <div class="social">
-              <a href=""><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>-->
         </div>
 
       </div>
     </div>
   </section>
 
-<!--==========================
-  Contact Section
-============================-->
+<!--Contact Section-->
   <section id="contact">
     <div class="container wow fadeInUp">
       <div class="row">
@@ -357,12 +243,6 @@
               <i class="fa fa-envelope"></i>
               <p>info@pedal.com</p>
             </div>
-
-            <!--<div>
-              <i class="fa fa-phone"></i>
-              <p>+1 5589 55488 55s</p>
-            </div>-->
-
           </div>
         </div>
 
@@ -396,9 +276,7 @@
     </div>
   </section>
 
-<!--==========================
-  Footer
-============================-->
+<!--Footer-->
   <footer id="footer">
       <div class="container">
         <div class="row">
@@ -422,11 +300,9 @@
   <script src="lib/stickyjs/sticky.js"></script>
   <script src="lib/easing/easing.js"></script>
 
-  <!-- Template Specisifc Custom Javascript File -->
   <script src="js/custom.js"></script>
 
   <script src="contactform/contactform.js"></script>
-
 
 </body>
 </html>
