--- a/project/proto4/index.html
+++ b/project/proto4/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <h1>Make biking your main form of transportaion</h1>
-        <h2>Ride your bicycle today for a <span class="rotating">better world, better health, better future</span></h2>
+        <h2>Ride your bicycle today for a better<span class="rotating">world, lifestyle, future</span></h2>
         <div class="actions">
           <a href="#about" class="btn-get-started">About</a>
           <a href="#why" class="btn-why">Why Bike</a>
@@ -321,7 +321,7 @@ map.on('load', function () {
         <div class="col-md-3">
           <div class="member">
             <div><img src="img/team-2.jpg" alt="instapictures"></div>
-            <p>****Above there will be instagram photo posts that used the #pedalpower hashtag. Users can scroll horizontally through three photos at a time and go back and forward using the arrows on the left and right of the three photos****</p>
+  
         </div>
         </div>
 
