audience test results and final project links

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 					<li><a href="project/proto1/index.html">Prototpye 1</a></li>
 					<li><a href="project/proto1/index.html">Prototpye 2</a></li>
 					<li><a href="project/proto3/index.html">Prototpye 3</a></li>
+					<li><a href="project/audienceTestResults.html">Prototpye 3</a></li>
+					<li><a href="project/final/index.html">Final</a></li>
 				</ul>
 			</nav>
 
