edits index finals

--- a/project/final/index.html
+++ b/project/final/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset='utf-8' />
   <meta charset="utf-8">
   <title>Pedal</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -8,7 +9,7 @@
   <meta content="" name="description">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i%7CRaleway:300,400,500,700,800" rel="stylesheet">
 
   <!-- CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,9 +20,8 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-  <meta charset='utf-8' />
     <title></title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <meta name='viewport' content='initial-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.33.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.33.1/mapbox-gl.css' rel='stylesheet' />
     <style>
@@ -55,7 +55,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img src="img/logo.png" alt="logo" title="logo" /></img></a>
+        <a href="#hero"><img src="img/logo.png" alt="logo" title="logo" /></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -66,7 +66,6 @@
           <li><a href="#map">Map</a></li>
           <li><a href="#testimonials">Footprint</a></li>
           <li><a href="#team">#pedalpower</a></li>
-          </li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav>
@@ -321,7 +320,7 @@ map.on('load', function () {
         <div class="col-md-3">
           <div class="member">
             <div><img src="img/team-2.jpg" alt="instapictures"></div>
-  
+
         </div>
         </div>
 
@@ -359,7 +358,7 @@ map.on('load', function () {
           <div class="form">
             <div id="sendmessage">Your message has been sent. Thank you!</div>
             <div id="errormessage"></div>
-            <form action="" method="post" role="form" class="contactForm">
+            <form="" method="post" role="form" class="contactForm">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validation"></div>
